[package]
name = "megadex_rkv"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
edition = "2018"

[dependencies]
rkv = { git = "https://github.com/mozilla/rkv" }
tempfile = "3.0.4"
serde = "1.0.80"
bincode = "1.0.1"
failure = "0.1.3"

[dev-dependencies]
serde_derive = "*"
