[package]
name = "megadex_rkv"
version = "0.1.0"
authors = ["Rick Richardson <rick.richardson@gmail.com>"]
description = "A lib that makes it easy to index and retrieve structs by any of their fields"
license = "MIT"
edition = "2018"

[dependencies]
rkv = "0.8.0"
tempfile = "3.0.4"
serde = "1.0.80"
bincode = "1.0.1"
failure = "0.1.3"

[dev-dependencies]
serde_derive = "1.0.84"
